--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,43 +1,20 @@
-# Couldn't automatically generate a config from your source code.
-# This is a generic template to serve as a base for your custom config
-# See: https://circleci.com/docs/configuration-reference
 version: 2.1
+
 jobs:
-  test:
-    docker:
-      - image: cimg/base:stable
-    steps:
-      - checkout
-      # Replace this with a real test runner invocation
-      - run:
-          name: Run tests
-          command: echo 'replace me with real tests!' && false
   build:
     docker:
-      - image: cimg/base:stable
+      - image: circleci/node:latest
     steps:
       - checkout
-      # Replace this with steps to build a package, or executable
       - run:
-          name: Build an artifact
-          command: touch example.txt
-      - store_artifacts:
-          path: example.txt
-  deploy:
-    docker:
-      - image: cimg/base:stable
-    steps:
-      # Replace this with steps to deploy to users
-      - run:
-          name: deploy
-          command: '#e.g. ./deploy.sh'
+          name: Display received parameters
+          command: |
+            echo "Username: $CIRCLE_USERNAME"
+            echo "Time in game: $CIRCLE_TIME_IN_GAME"
+            echo "Message: $CIRCLE_MESSAGE"
+
 workflows:
-  example:
+  version: 2
+  build_and_test:
     jobs:
-      - test
-      - build:
-          requires:
-            - test
-      - deploy:
-          requires:
-            - test
+      - build
